sites/website/src/docs/2.x/api/fast-element.elementstyles.md
<!-- Do not edit this file. It is automatically generated by API Documenter. -->

[Home](./index.md) &gt; [@microsoft/fast-element](./fast-element.md) &gt; [ElementStyles](./fast-element.elementstyles.md)

## ElementStyles class

Represents styles that can be applied to a custom element.

**Signature:**

```typescript
export declare class ElementStyles 
```

## Constructors

<table><thead><tr><th>

Constructor


</th><th>

Modifiers


</th><th>

Description


</th></tr></thead>
<tbody><tr><td>

[(constructor)(styles)](./fast-element.elementstyles._constructor_.md)


</td><td>


</td><td>

Creates an instance of ElementStyles.


</td></tr>
</tbody></table>

## Properties

<table><thead><tr><th>

Property


</th><th>

Modifiers


</th><th>

Type


</th><th>

Description


</th></tr></thead>
<tbody><tr><td>

[behaviors](./fast-element.elementstyles.behaviors.md)


</td><td>

`readonly`


</td><td>

ReadonlyArray&lt;[HostBehavior](./fast-element.hostbehavior.md)<!-- -->&lt;HTMLElement&gt;&gt; \| null


</td><td>

The behaviors associated with this set of styles.


</td></tr>
<tr><td>

[strategy](./fast-element.elementstyles.strategy.md)


</td><td>

`readonly`


</td><td>

[StyleStrategy](./fast-element.stylestrategy.md)


</td><td>

Gets the StyleStrategy associated with these element styles.


</td></tr>
<tr><td>

[styles](./fast-element.elementstyles.styles.md)


</td><td>

`readonly`


</td><td>

ReadonlyArray&lt;[ComposableStyles](./fast-element.composablestyles.md)<!-- -->&gt;


</td><td>


</td></tr>
<tr><td>

[supportsAdoptedStyleSheets](./fast-element.elementstyles.supportsadoptedstylesheets.md)


</td><td>

`static`

`readonly`


</td><td>

boolean


</td><td>

Indicates whether the DOM supports the adoptedStyleSheets feature.


</td></tr>
</tbody></table>

## Methods

<table><thead><tr><th>

Method


</th><th>

Modifiers


</th><th>

Description


</th></tr></thead>
<tbody><tr><td>

[normalize(styles)](./fast-element.elementstyles.normalize.md)


</td><td>

`static`


</td><td>

Normalizes a set of composable style options.


</td></tr>
<tr><td>

[setDefaultStrategy(Strategy)](./fast-element.elementstyles.setdefaultstrategy.md)


</td><td>

`static`


</td><td>

Sets the default strategy type to use when creating style strategies.


</td></tr>
<tr><td>

[withBehaviors(behaviors)](./fast-element.elementstyles.withbehaviors.md)


</td><td>


</td><td>

Associates behaviors with this set of styles.


</td></tr>
<tr><td>

[withStrategy(Strategy)](./fast-element.elementstyles.withstrategy.md)


</td><td>


</td><td>

Sets the strategy that handles adding/removing these styles for an element.


</td></tr>
</tbody></table>

